# etching-rs

./: .clang-format  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
app/src/handler/: mod.rs
app/src/handler/dict/: mod.rs
conf/: app.yml  base.yml  dev.yml  prod.yml
crates-entity/: Cargo.toml  build.rs
crates-entity/src/: announce.rs  banner.rs  banner_kind.rs  dict.rs  guide.rs  lib.rs  perm.rs  prelude.rs  question.rs  resource.rs  role.rs  sys_role_user.rs  sys_user.rs
crates-types/: Cargo.toml
crates-types/src/error/: mod.rs
crates-utils/: Cargo.toml
crates-utils/src/: deploy.rs
entity/: Cargo.toml  build.rs
entity/mapper/: announce.proto
entity/src/: announce.rs  app_version.rs  daily_record.rs  invoice_pending.rs  lib.rs  news.rs  orders.rs  orders_acceptance.rs  orders_enroll.rs  orders_new.rs  orders_pay_compensation_log.rs  pay_info.rs  post_followers.rs  prelude.rs  pub_pay_bank.rs  pub_pay_node.rs  pub_supper_bank.rs  quoted_price.rs  registration_company_apply.rs  resource.rs  stats_user_retention.rs  stores.rs  stores_experiences.rs  stores_qualified.rs  sys_district.rs  topic_categories.rs  tpl_tax_ratio.rs  transaction.rs  user.rs  user_cancellations.rs  user_commission.rs  user_push_conf.rs  user_sign_log.rs  user_subjects.rs  wallets.rs  withdraw.rs  withdraw_apply.rs
entity/src/entities/: announce.rs  app_version.rs  apply_user_product.rs  associate_bind.rs  bad_orders.rs  banner.rs  banner_kind.rs  carte.rs  carte_favorite.rs  carte_invoice.rs  carte_starred.rs  carte_stats.rs  carte_tag.rs  carte_user.rs  carte_viewed.rs  category.rs  daily_record.rs  dict.rs  dict_item.rs  discovery_notices.rs  enroll_records.rs  faq.rs  feedback.rs  geo_map.rs  guide.rs  industry.rs  install.rs  invoice.rs  invoice_apply.rs  invoice_commission.rs  invoice_communication.rs  invoice_pending.rs  invoice_title.rs  luobo_seq.rs  message.rs  mod.rs  news.rs  orders.rs  orders_acceptance.rs  orders_complaint.rs  (+80 more)
etching-app/: Cargo.toml
etching-app/src/: lib.rs  main.rs  router.rs  runtime.rs  startup.rs
etching-app/src/configuration/: app.rs  database.rs  mod.rs
etching-app/src/handler/dict/: mod.rs
etching-app/src/handler/public/: passport.rs
etching-app/src/middleware/: simple.rs
etching-app/src/pkg/: mod.rs
etching-entity/: Cargo.toml
etching-entity/src/: lib.rs
etching-entity/src/entities/: announce.rs  app_version.rs  apply_user_product.rs  associate_bind.rs  bad_orders.rs  banner.rs  banner_kind.rs  bbk.rs  carte.rs  carte_favorite.rs  carte_invoice.rs  carte_starred.rs  carte_stats.rs  carte_tag.rs  carte_user.rs  carte_viewed.rs  category.rs  daily_record.rs  dict.rs  discovery_notices.rs  enroll_records.rs  faq.rs  feedback.rs  geo_map.rs  guide.rs  industry.rs  install.rs  invoice.rs  invoice_apply.rs  invoice_commission.rs  invoice_communication.rs  invoice_pending.rs  invoice_title.rs  luobo_seq.rs  message.rs  mod.rs  news.rs  orders.rs  orders_acceptance.rs  orders_complaint.rs  (+79 more)
etching-handler/: Cargo.toml
etching-handler/src/: lib.rs
etching-handler/src/dict/: mod.rs
etching-handler/src/public/: misc.rs  passport.rs
etching-middleware/: Cargo.toml
etching-testing/: Cargo.toml
etching-testing/examples/: config.rs  create_table.rs  entity.rs  mapper.rs  web_hello.rs
etching-types/: Cargo.toml
etching-utils/: Cargo.toml
etching-utils/src/: deploy.rs  password.rs
examples/: bcrypt.rs  config.rs  create_table.rs  entity.rs  jwt.rs  mapper.rs
src/: lib.rs  main.rs  runtime.rs  startup.rs  telemetry.rs
src/configuration/: mod.rs
src/error/: mod.rs
src/handler/: mod.rs
src/handler/dict/: mod.rs
src/handler/misc/: healthy.rs  mod.rs
src/handler/passport/: login.rs  logout.rs  mod.rs
src/handler/public/: healthy.rs  login.rs  misc.rs  mod.rs  passport.rs
src/logic/: mod.rs
src/pkg/: password.rs
src/router/: api.rs  mod.rs
testing/: Cargo.toml
testing/examples/: bcrypt.rs  create_table.rs  mw_say_hi.rs
tests/: query.rs
