[package]
name = "etching"
version = "0.0.1-rc0"
edition = "2021"
authors = ["thinkgos <thinkgo@aliyun.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
entity = {path = "entity"}

actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
secrecy = {version = "0.8", features = ["serde"]}
config = "0.13"
tap = "1"

bytes = "1"
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"
jsonwebtoken = "9"
rand = "0.8"

# tracing
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"

# orm
sea-orm = {version = "0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros"]}
sea-query = "0"

# crypto
bcrypt = "0.15"
cipher = "0.4"
aes = "0.8"
cbc = "0.1"
base64 = "0.21"

# swagger
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

[build-dependencies]
prost-build = "0.12"
