[workspace]
resolver = "2"
members = [
    "etching-app",
    "etching-testing",
    "etching-handler",
    "etching-middleware",
    "crates-entity",
    "crates-types",
    "crates-utils",
]
default-members = [
    "etching-app",
    "etching-testing",
]

[workspace.package]
version = "0.0.1-rc1"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "etching is an admin backend."
keywords =[
    "backend"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thinkgos/etching-rs"
repository = "https://github.com/thinkgos/etching-rs"

[workspace.dependencies]

# web
actix-web = "4"

# async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# utilities
rand = "0.8"
bytes = "1"
secrecy = {version = "0.10", features = ["serde"]}
jsonwebtoken = "9"
config = "0.14"
tap = "1"
strum = {version = "0.26", features = ["derive"]}

# error 
anyhow = "1"
thiserror = "2"

# serialization
serde = { version = "1", features = ["derive"] }

# tracing
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"

# orm
sea-orm = {version = "1", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros"]}
sea-query = "0"

# swagger
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

# protobuf
prost-build = "0.13"
prost = "0.13"
prost-types = "0.13"

# crypto
bcrypt = "0.16"
cipher = "0.4"
aes = "0.8"
cbc = "0.1"
base64 = "0.22"

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # for experimental dev

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
codegen-units = 1