[package]
name = "crates-entity"
version.workspace =true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm.workspace = true
serde.workspace = true
# bytes.workspace = true
# prost.workspace = true
# Only necessary if using Protobuf well-known types:
# prost-types.workspace = true

# swagger
utoipa.workspace = true

# [build-dependencies]
# prost-build.workspace = true
