[package]
name = "crates-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand.workspace = true

anyhow.workspace = true

cipher.workspace = true
aes.workspace = true
cbc.workspace = true
base64.workspace = true
strum.workspace = true