[package]
name = "entity"
version = "0.1.0"
edition = "2021"
authors = ["thinkgos <thinkgo@aliyun.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version = "0"}
serde = { version = "1", features = ["derive"] }
bytes = "1"
prost = "0.11"
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"

[build-dependencies]
prost-build = "0.11"