[package]
name = "entity"
version = "0.0.1-rc1"
edition = "2021"
authors = ["thinkgos <thinkgo@aliyun.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version = "0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros"]}
serde = { version = "1", features = ["derive"] }
bytes = "1"
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"

# swagger
utoipa = { version = "4", features = ["actix_extras", "chrono"] }

[build-dependencies]
prost-build = "0.12"
