[package]
name = "etching-app"
version.workspace =true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
etching-entity = {path = "../etching-entity"}

# web
actix-web.workspace = true

# async
tokio.workspace = true
futures-util.workspace = true

# utilities
rand.workspace = true
bytes.workspace = true
secrecy.workspace = true
jsonwebtoken.workspace = true
config.workspace = true
tap.workspace = true

# error 
anyhow.workspace = true
thiserror.workspace = true

# serialization
serde.workspace = true

# protobuf
prost.workspace = true
prost-types.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-actix-web.workspace = true

# orm
sea-orm.workspace = true
sea-query.workspace = true

# crypto
bcrypt.workspace = true
cipher.workspace = true
aes.workspace = true
cbc.workspace = true
base64.workspace = true

# swagger
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[build-dependencies]
prost-build.workspace = true
