[package]
name = "testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = {path = "../entity"}

actix-web.workspace = true

tokio.workspace = true
futures-util.workspace = true

sea-orm.workspace = true
sea-query.workspace = true

serde.workspace = true

jsonwebtoken.workspace = true
bcrypt.workspace = true